# middleware/validation.js
@@ -38,11 +38,30 @@ const checkPokemonData = (req, res, next) => {
   next()
 }
 
+// Validation rules for Trainers
+const trainerRules = () => [
+  body("name").notEmpty().withMessage("Name is required"),
+  body("email").isEmail().withMessage("Valid email is required"),
+  body("password").isLength({ min: 6 }).withMessage("Password must be at least 6 characters")
+]
+
+const checkTrainerData = (req, res, next) => {
+  const errors = validationResult(req)
+  if (!errors.isEmpty()) {
+    return res.status(400).json({ errors: errors.array() })
+  }
+  next()
+}
+
+
+
 
 module.exports = {
   pokemonRules,
   checkPokemonData,
   itemRules,
-  checkItemData: checkPokemonData 
+  checkItemData: checkPokemonData ,
+  trainerRules,
+  checkTrainerData
 }
 
